Add spotbugs
And as a result of adding spotbugs, a few changes were made to address
the issues found by spotbugs. The major ones are:
- use immutable collection in classes to keep them immutable
- add error message for potential NPE issues
- rename some classes in the tracing pakcage so they do not have the
  same name as some JSL classes